# barista_matic

./: .dockerignore  .flake8  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 863cc33dd118_first_commit.py  93a6f31d62a9_test_data.py
barista_matic/: run.py  settings.py
barista_matic/adapters/: orm.py  repository.py
barista_matic/domain/: exceptions.py  model.py
barista_matic/entrypoints/: interactive_cli.py
barista_matic/service_layer/: services.py
tests/: conftest.py  helpers.py  test_cli.py  test_models.py  test_services.py
tests/integrations/: test_cli_orm.py  test_service_orm.py
