[tool.poetry]
name = "barista-matic"
version = "0.1.0"
description = ""
authors = ["Matias Morales"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.28"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
