[tool.poetry]
name = "barista-matic"
version = "0.1.0"
description = ""
authors = ["Matias Morales"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.1"
mypy = "^1.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-timeout = "^2.3.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.poetry.scripts]
baristamatic_cli = "barista_matic.run:main"
ensure_db = "barista_matic.run:create_db_file_if_not_exists"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
